@@ -1,6 +1,7 @@
 ibus-sunpinyin (2.0.3-2) unstable; urgency=low
 
   * Add libibus-1.0-dev to build-depends, Remove libibus-dev
+  * Add build-arch and build-indep in debian/rules
 
  -- Liang Guo <bluestonechina@gmail.com>  Fri, 09 Sep 2011 13:59:54 +0800
 
